[DEV-11474] Fix menu options center-alignment

--- a/packages/slate-editor/src/components/OptionsGroup/OptionsGroup.module.scss
+++ b/packages/slate-editor/src/components/OptionsGroup/OptionsGroup.module.scss
@@ -21,6 +21,10 @@
 
 .option {
     &.variant-icon-label {
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        justify-content: center;
     }
 
     &.variant-pills {
